sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:18: error: value ++ is not a member of Int
			i++
                         ^